_sass/main.scss
/* ... */
#announcement {
    margin-bottom: 20px;
    div.announcement_heading {
        
        img.label {
            margin-right: 5px;
            vertical-align: bottom;
            float: right;
        }
        
        h1 {
            @include sidebar_component_label;
            font-family: $font_announcement_title;
            font-weight: normal;
            color: $color_announcement_title;
            vertical-align: top;
            padding: 0 0 2px 0;
        }
    }

    p {
        font-family: $font_announcement_text;
        font-size: $font_size_sidebar;
        line-height: $font_size_sidebar + 2;
        text-align: left;
        color: $color_announcement_text;
        
        &.date {
                font-family: $font_announcement_date;
                font-size: $font_size_announcement_date;
                color: $color_announcement_date;
                margin: 0;
        }
    }
}

#random_quotes div.quote {
   
    @include sidebar_component;
    background: $color_sidebar_bg;
    // Less vertical space
    padding-bottom: 8px;
    margin-bottom: 12px;
    
    table {
        margin: 0px;
        margin-top: 8px;
    }
    table tr td {
        vertical-align: top;
        border: none;
        padding: 0px;
    }
    
    p {
        font-family: $font_quote;
        font-size: $font_size_quote;
        @include max-screen(720px) {
            font-size: $font_size_quote + 1;
        }
        font-style: normal;
        line-height: $font_line_height_quote;
        letter-spacing: 0.25px;
        color: $color_quote_text;
        margin-top: 0px;
        margin-bottom: 0px;
        
        span {
            font-family: $font_quote_author;
            font-size: $font_size_quote_author;
            font-style: normal;
            color: $color_quote_author;
            
        }
        span.qauthor {
            text-transform: uppercase;
            font-weight: normal;
        }
    }
}

#newsbits_roll {
    @include sidebar_component_scroll;
    background: $color_sidebar_bg;

    h1 {
        color: $color_sidebar_label;
    }

    div.newsbits {
        margin-bottom: 0px;
        @include min-screen(721px) {
            height: 500px;
            overflow-y: scroll;
        }
        @include max-screen(720px) {
            padding-right: 15px;
        }
        overflow-x: hidden;
        background: $color_sidebar_bg;

        div.newsbit {
            h2 {
                font-family: $font_news_title;
                font-size: $font_size_news_title;
                font-weight: bold;
            }
            p {
                font-family: $font_news_text;
                font-size: $font_size_news_text;
                margin-top: 2px;
                padding: 0;
                &.date {
                    color: $color_news_bit_date;
                    margin-top: 0px;
                    margin-bottom: 0px;
                    padding: 0;
                }
            }
        }
    }
}



/* ------------------------------------------------------------------------- */
/* Page main column                                                          */
/* ------------------------------------------------------------------------- */

section.page_column_main {

    @include min-screen(721px) { width: 50%; }
    @include max-screen(720px) { width: 93%; }
    
    margin-left: 50px;
    margin-right: 40px;
    
    @include max-screen(720px) {
        margin-left: 15px;
        margin-right: 15px;
    }
    
    h1 {
        font-family: $font_page_title;
        font-size: $font_size_page_title;
    }
    
    p {
        font-family: $font_page_text;
        @include min-screen(721px) {
            font-size: $font_size_page_text;
            line-height: $font_line_height_page_text;
        }
        @include max-screen(720px) {
            font-size: $font_size_page_text;
            line-height: $font_line_height_page_text;
        }
    }
    
    div.social_media_links {
        ul {
            padding: 0;
            
            li {
                text-align: center;
                // Display list items horizontally
                display: inline;
                list-style-type: none;
                padding: 0;
                margin-right: 5px;
                a {
                    @include button;
                }
            }
        }
    }
}
/* ... */

